		2 + warnings
		3 + all files read
		4 + all files tried to read

	Fixed an off by one bug in the line counting for reporting parse
	errors.

12/07/04 Added a name record to struct experiment and the corresponding
	functions in glb_parser.y to fill this record with the name information
	obtained during parsing. There are now two new functions which allow
	to access this feature:
		glbNameToValue(0,"rule","#rule0")
		glbValueToName(0,"rule",0)
	This name record is freed by glbFreeExp.

	Rearranged the return values of glbInitExperiment, the more negative
	the worse 
	->  0 only for a flawless file (no defaults used etc.)
	-> -1 for files which produced a warning but no error
	-> -2 for file which produced an error
	does not return for fatal errors.
	
	Added pretty printing to globes.

	Added -D option to globes, which allows to define AEDL variables:
		-DNAME=VALUE

	Added -N No-oscillation to globes.

	inlcude now requires quotes around the file name.

14/07/04 Added subdirectory examples to the tar-ball, which contains the 
	examples by Walter. I took his Makefile as starting point to write 
	a Makefile.in which is then processed by 'configure', which in turn
	yields a Makefile which should work irrespective of the installation 
	mode. Thus all flags are filled in automatically depending on wether 
	root has installed GLoBES or a user has it installed to some 
	non-standard location. Furthemore 'configure' spits out a reminder for
	necessary post-install actions, like running 'ldconfig'. Update
	'INSTALL' accordingly.

	Updated top-level Makefile.am in order to be okay with changed contents
	in data/

19/07/04 Added a BUGS file
	
	Added some format checks to glb_X_section_loader and glb_flux_loader.
	Moreover both functions now accept one-line comments like
		# this is a comment
		1 2 3 4 5 6 7 
		# this is another comment
	
	Added a REFERENCES file, the idea is to collect all bibliographical
	information about *our* glb-files in one place.