@@ -1,30 +1,13 @@
-DIST_SUBDIRS = source nrc 
-SUBDIRS = nrc source
+DIST_SUBDIRS = source nrc data test
+SUBDIRS = nrc source data test
 
 
 EXTRA_DIST =  globes/globes.h\
-data/CNGS_Spectra.dat data/NUMI12minus.dat\
-data/NUMIminus.dat  data/XCC_CNGS.dat\
-data/JHFminus.dat   data/NUMI12plus.dat\
-data/NUMIplus.dat   data/XCCreactor.dat\
-data/JHFplus.dat    data/NUMI9minus.dat\
-data/Reactor.dat    data/XNC.dat\
-data/MINOS_Spectra.dat  data/NUMI9plus.dat\
-data/XCC.dat        data/XQE.dat\
-data/ICARUS.glb     data/JHFSKantinew.glb\
-data/NUMI9.glb\
-data/NuFact2.glb    data/JHFHKAll.glb\
-data/JHFSKcomb.glb  data/NUMI12.glb\
-data/NUMI9anti.glb  data/OPERA.glb\
-data/JHFSKnew.glb\
-data/NUMI12anti.glb data/NUMI9comb.glb\
-data/Reactor.glb\
-data/MINOS.glb data/NUMI12comb.glb\
-data/NuFact.glb\
 examples/Makefile.in examples/example1.c  examples/example3.c examples/myio.c\
 examples/example-tour.c  examples/example2.c  examples/example4.c\
 examples/myio.h examples/XCC.dat examples/NuFact.glb\
-BUGS REFERENCES
+BUGS REFERENCES test/test-run test/.r1 test/.r2 test/.r3 test/.r4 test/.r5\
+test/.r6 test/.r7 test/.r8 test/test-mem data/test-file
 
 
 AM_YFLAGS =  -d 
